# lossmodels

./: CHANGELOG.md  README.md  pyproject.toml
docs/: examples.md  index.md
src/lossmodels/: __init__.py
src/lossmodels/frequency/: __init__.py  modified.py  truncated.py
src/lossmodels/severity/: __init__.py  finite_support.py  other_severity.py  transformed_beta.py  transformed_gamma.py
tests/frequency/: test_ab1.py
tests/severity/: test_fam_severities.py
