[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lossmodels"
version = "0.5.2"
description = "A Python library for actuarial loss modeling using frequency-severity methods."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Michael Bryant" }]
keywords = [
    "actuarial",
    "insurance",
    "risk",
    "statistics",
    "simulation",
    "loss modeling",
    "frequency severity",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Homepage = "https://github.com/OpenActuarial/lossmodels"
Documentation = "https://openactuarial.org/lossmodels.html"
Repository = "https://github.com/OpenActuarial/lossmodels"
Issues = "https://github.com/OpenActuarial/lossmodels/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lossmodels"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["slow: marks tests as slow"]
